@startuml MapSystem

left to right direction

skinparam backgroundColor white
skinparam classBackgroundColor #ECFDF5
skinparam classBorderColor #10B981
skinparam arrowColor #047857
skinparam roundcorner 20
skinparam shadowing false

abstract class BaseActivity

class MainActivity {
  +AddAllMarkers(): void
  -loadCarouselDonations(): void
}

class FullMapActivity {
  +AddAllMarkers(): void
}

class CityInfoWindow {
  +onOpen(): void
  +onClose(): void
}

MainActivity --|> BaseActivity
FullMapActivity --|> BaseActivity

FullMapActivity --> CityInfoWindow

@enduml